# satellite-data-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  app.py  plan-satellite-data-agent.md  pyproject.toml  requirements.txt  run.sh
data/: sample_telemetry.csv
data/knowledge_base/: satellite_ops_guide.md
data/telemetry/: sample.json
scripts/: render_graph.py
src/satellite_data_agent/: __init__.py  __main__.py  cli.py  graph.py  llm.py  state.py
src/satellite_data_agent/agents/: __init__.py  analyst.py  data_fetcher.py  rag_retriever.py  report_gen.py  supervisor.py
src/satellite_data_agent/rag/: indexer.py  retriever.py
src/satellite_data_agent/tools/: nasa_api.py
tests/: test_agents.py  test_graph.py  test_state.py
