[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "satellite-data-agent"
version = "0.1.0"
description = "LangGraph agent workflow for satellite and IoT telemetry analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-groq>=0.2.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.0",
  "langsmith>=0.1.0",
  "pandas>=2.2.0,<3.0.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.0",
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0",
  "requests>=2.31.0",
  "streamlit>=1.35.0",
  "langchain-text-splitters>=0.3.0",
]

[project.scripts]
satellite-data-agent = "satellite_data_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
